--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
 <section> 
-    <h3>Página de contato</h3>
+    <h3>Página de contatos</h3>
     <ul>
         <li>Formulário de contato</li>
         <li>Nome</li>
@@ -113,7 +113,7 @@
     <ul>
         <li>Número: (55) 85 999999999  (INTEGRAR COM WHATSAPP) </li>
         <li>Email: mateusmartins12345678@gmail.com</li>
-        <li>Endereço: Rua daqui aculá 0000000 - Fortaleza, Ceará </li>
+        <li>Endereço: Rua daqui aculá teste - Fortaleza, Ceará </li>
     </ul> 
 </section>
 
