--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <h3>Introdução</h3>
         <p> Meu nome é <b>Mateus Martins</b>, Sou estudante do 3 ano do ensino médio e gosto de comer comida boa, estudar e escutar música.</p>
         
-   </section>
+   </section><br><br>
+
 
 
 <section>
@@ -26,7 +27,7 @@
         <li>Cursando o Ensino Médio.</li>
         <li>Curso Capacita em progresso.</li>
     </ul>
-</section>
+</section><br> <br>
 
 
 
@@ -38,30 +39,30 @@
         <li>Internet, sites e sistemas</li>
         <li>Jogos</li>
     </ul>
-</section>
+</section><br><br>
 
 
 
 <section>
     <h3>Conhecimentos</h3>
         <div class="skill">
-  <li><span>HTML                       15%</span>
+  <li><span>HTML                       10%</span>
   <div class="progress-bar">
-    <div class="progress" style="width: 15%"></div>
+    <div class="progress" style="width: 10%"></div>
   </div>
 </div></li>
 
         <div class="skill">
-  <li><span>CSS                        15%</span>
+  <li><span>CSS                        10%</span>
   <div class="progress-bar">
-    <div class="progress" style="width: 15%"></div>
+    <div class="progress" style="width: 10%"></div>
   </div>
 </div></li>
 
        <div class="skill">
-  <li><span>Python                     15%</span>
+  <li><span>Python                     10%</span>
   <div class="progress-bar">
-    <div class="progress" style="width: 15%"></div>
+    <div class="progress" style="width: 10%"></div>
   </div>
 </div></li>
     
@@ -69,55 +70,61 @@
   <ul> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi12qXey_Yl2BNgnTMizr8RDkIYtbfiSD8Rl5z0jPUDQFXcK7SXiVLJEHmMXkLCa_LugtWK3rmhHr3pzR47Of4Eh_oKI5r6lWgucQ7IbLE7UEMEZNNdHHVrW6t1bvJHodFtMQHqOLmugA8/s1600/2dilfrl.jpg" height="100px" width="100px"></ul>
 
 </ul>
-
-
-</section>
+</section><br><br>
 
 
 <section>
     <h3>Seção de aprendizados</h3>
     <ul>
-        <li>Exemplos de código</li>
+        <li>Atualmente estou desenvolvendo e aprendendo novas habilidades na área de Programação,</li>
         <li>Dicas</li>
         <li>tecnologias que estou aprendendo</li>
         <li>**** INCLUIR FORMULÁRIO PARA ENVIO DE COMENTÁRIOS</li>
     </ul>
-</section>
+</section> <br><br>
 
 <section>
     <h3>Galeria de fotos</h3>
     <img src="https://i.ebayimg.com/images/g/yfwAAOSwBOBkQh-V/s-l1600.webp" width="100" height="100"/>
-</section>
+</section> <br><br>
 
 <section>
     <h3>Redes sociais</h3>
     <a href="https://x.com/tobyfox?lang=pt"> Link X</a> 
-</section>
+</section> <br><br>
 
 <section>
     <h3>Página de depoimentos</h3>
     <ul>- Criar seção com **depoimento dos clientes** atendidos.</ul>
      <ul>- Listar todos os depoimentos com nome, foto e comentário sobre seus serviços.</ul>
-</section>
+</section> <br><br>
 
 
 <section> 
     <h3>Página de contatos</h3>
-    <ul>
-        <li>Formulário de contato</li>
-        <li>Nome</li>
-        <li>Email(podemos integrar email de envio direto)</li>
-        <li>assunto</li>
-        <li>telefone</li>
-        <li>Botão enviar</li>
-</section>
+    <form action="/cadastrar_usuario">
+        <label for="nome">Nome   : </label>
+        <input id="nome" name="nome" type="text" placeholder="Digite seu nome"> <br>
+
+        <label for="email">Email   :    </label>
+        <input id="email" name="email" type="email" placeholder="Digite seu email"> <br>
+
+        <label for="telefone">Telefone: </label>
+        <input id="telefone" name="telefone" type="tel" placeholder="Digite seu telefone"> <br>
+
+        <textarea id="mensagem" name="mensagem" rows="4" cols="50" placeholder="Digite sua mensagem e assunto"></textarea> <br>
+
+        <button type="submit">Enviar</button>
+    </form>
+</section><br><br>
 
 
 <section>
     <h3>Contato</h3>
     <ul>
-        <li>Número: (55) 85 999999999  (INTEGRAR COM WHATSAPP) </li>
-        <li>Email: mateusmartins12345678@gmail.com</li>
+        <li><a href="https://wa.me/+5585982277405?text=Mensagem%20predefinida">Whatsapp</a>
+        <link rel="stylesheet" href="https://wa.me/+558591498855?text=Mensagem%20predefinida"></li>
+        <li>Email: mateus.martinsxd9@gmail.com</li>
         <li>Endereço: Rua daqui aculá teste - Fortaleza, Ceará </li>
     </ul> 
 </section>
