--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="header">
   <a href="#default" class="logo">Portfólio</a>
   <div class="header-right">
-    <a class="active" href="#home">Home</a>
+    <a href="#home">Home</a>
     <a href="#Introdução">Introdução</a>
     <a href="#Histórico">About</a>
     <a href="#Interesses">Interesses</a>
@@ -24,6 +24,7 @@
     <a href="#Contato">Contato</a>
   </div>
 </div>
+
 
 
     <title>Portfólio</title>
