--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section id="Introdução">
         <h3>Introdução</h3>
-        <p> Meu nome é <b>Mateus Martins</b>, tenho 17 anos de idade, moro em Fortaleza. Sou estudante do 3 ano do ensino médio e gosto de comer comida boa, estudar e escutar música.</p>
+        <p> Meu nome é <b>Mateus Martins</b>, tenho 17 anos de idade, moro em Fortaleza, estudo no Colégio Dom Felipe Pré Universitario. Sou estudante do 3 ano do ensino médio e gosto de comer comida boa, estudar e escutar música.</p>
         
    </section><br><br>
 
