readme e atualizações de texto finais.

--- a/index.html
+++ b/index.html
@@ -30,20 +30,18 @@
 
     <section id="Introdução">
         <h3>Introdução</h3>
-        <p> Meu nome é <b>Mateus Martins</b>, tenho 17 anos de idade, moro em Fortaleza, estudo no Colégio Dom Felipe Pré Universitario. Sou estudante do 3 ano do ensino médio e gosto de comer comida boa, estudar e escutar música. Procuro compreender melhor  </p>
+        <p> Meu nome é <b>Mateus Martins</b>, tenho 17 anos de idade, moro em Fortaleza, estudo no Colégio Dom Felipe Pré Universitario. Sou estudante do 3 ano do ensino médio e gosto de comer comida boa, estudar e escutar música. Procuro compreender melhor a área do desenvolvimento estudando ela e futuramente atuar nela.</p>
         
    </section><br><br>
 
 
-
 <section id="Histórico">
-    <h3>Histórico profissional e acadêmico</h3>
+    <h3>Histórico</h3>
     <ul>
-        <li>Cursando o Ensino Médio.</li>
-        <li>Curso Capacita em progresso.</li>
-    </ul>
-</section><br> <br>
-
+        <li>Estudante do 3 ano do ensino médio</li>
+        <li>Estudando programação e desenvolvimento web</li>
+        <li>Aprendendo novas linguagens de programação</li>
+        <li>Focado em desenvolvimento Full-Stack no Capacita.</li>
 
 
 <section id="Interesses">
@@ -94,9 +92,10 @@
     <h3>Seção de aprendizados e dicas</h3>
     <ul>
         <li>Atualmente estou desenvolvendo e aprendendo novas habilidades na área de Programação</li>
+        <li>Este é meu primeiro projeto em git com HTML e CSS </li>
         <li> print("hello world") </li>
         <li>Tente manter uma rotina de prática constante para não esquecer códigos e as linguagens.</li>
-        <li>estou aprendendo a programar em html e css, em nível básico.</li> <br>
+        
 
         <label for="mensagem_aprendizado">Deixe comentários:</label> <br>
         <textarea id="mensagem_aprendizado" name="mensagem_aprendizado" rows="5" cols="100" placeholder="Digite Dicas ou comentários para que eu possa melhorar!!"></textarea> <br>
