--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <li>Este é meu primeiro projeto em git com HTML e CSS </li>
         <li> print("hello world") </li>
         <li>Tente manter uma rotina de prática constante para não esquecer códigos e as linguagens.</li>
+        <li>Estudo com amigos e com gamificações podem lhe ajudar a desenvolver e fixar o assunto mais rapidamente e de forma divertida.</li>
         
 
         <label for="mensagem_aprendizado">Deixe comentários:</label> <br>
