--- a/index.html
+++ b/index.html
@@ -42,17 +42,18 @@
         <li>Estudando programação e desenvolvimento web</li>
         <li>Aprendendo novas linguagens de programação</li>
         <li>Focado em desenvolvimento Full-Stack no Capacita.</li>
+    </ul>
 
 
 <section id="Interesses">
     <h3>Interesses</h3>
     <ul>
-        <li>Áreas da Tecnologia</li>
-        <li>Programação</li>
-        <li>Internet, sites e sistemas</li>
-        <li>Jogos</li>
-        <li>Área do Desenvolvimento Ful-Stack</li>
-        <li>Desenvolvimento Web</li>
+     <li>Áreas da Tecnologia</li>
+     <li>Programação</li>
+     <li>Internet, sites e sistemas</li>
+     <li>Jogos</li>
+     <li>Área do Desenvolvimento Full-Stack</li>
+     <li>Desenvolvimento Web</li>
     </ul>
 </section><br><br>
 
@@ -91,11 +92,11 @@
 <section id="Aprendizados">
     <h3>Seção de aprendizados e dicas</h3>
     <ul>
-        <li>Atualmente estou desenvolvendo e aprendendo novas habilidades na área de Programação</li>
-        <li>Este é meu primeiro projeto em git com HTML e CSS </li>
-        <li> print("hello world") </li>
-        <li>Tente manter uma rotina de prática constante para não esquecer códigos e as linguagens.</li>
-        <li>Estudo com amigos e com gamificações podem lhe ajudar a desenvolver e fixar o assunto mais rapidamente e de forma divertida.</li>
+     <li>Atualmente estou desenvolvendo e aprendendo novas habilidades na área de Programação</li>
+     <li>Este é meu primeiro projeto em git com HTML e CSS </li>
+     <li> print("hello world") </li>
+     <li>Tente manter uma rotina de prática constante para não esquecer códigos e as linguagens.</li>
+     <li>Estudo com amigos e com gamificações podem lhe ajudar a desenvolver e fixar o assunto mais rapidamente e de forma divertida.</li>
         
 
         <label for="mensagem_aprendizado">Deixe comentários:</label> <br>
